# LearningCode

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: helpers.cmake
src/lessons/: CMakeLists.txt
src/lessons/private/: main.cpp
src/lessons/public/: main.h
